Reverted comment change